--- a/app/src/main/res/layout/activity_profile1.xml
+++ b/app/src/main/res/layout/activity_profile1.xml
@@ -40,8 +40,8 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
                 android:id="@+id/profile_image"
-                android:layout_width="71dp"
-                android:layout_height="71dp"
+                android:layout_width="@dimen/avatar"
+                android:layout_height="@dimen/avatar1"
                 android:src="@drawable/avatar"
                 android:enabled="false"
                 android:clickable = "false"
@@ -122,6 +122,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/mauden"/>
             <TextView
+                android:layout_marginTop="5dp"
                 android:id="@+id/email"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
