--- a/app/src/main/res/layout/popupdangky.xml
+++ b/app/src/main/res/layout/popupdangky.xml
@@ -12,7 +12,9 @@
         android:layout_gravity="left"
         android:textColor="@color/mauden"
         android:textStyle="bold"
-        android:text="ITSupport"/>
+        android:text="ITSupport"
+        android:textSize="@dimen/loaitaikhoan"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,10 +22,12 @@
         android:id="@+id/dangkypopup"
         android:text="Đăng ký tài khoản thành công."
         android:textColor="@color/mauden"
+        android:textSize="@dimen/loaitaikhoan"
+
         />
     <Button
-        android:layout_width="70dp"
-        android:layout_height="30dp"
+        android:layout_width="@dimen/bntokpopupW"
+        android:layout_height="@dimen/bntokpopupH"
         android:text="OK"
         android:id="@+id/okpopup"
         android:textColor="@color/actionbar_text"
@@ -31,5 +35,7 @@
         android:layout_gravity="right"
         android:layout_marginTop="20dp"
         android:layout_marginRight="30dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:textSize="@dimen/loaitaikhoan"
+        />
 </LinearLayout>
