--- a/app/src/main/res/layout/popuplayout.xml
+++ b/app/src/main/res/layout/popuplayout.xml
@@ -1,8 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="10dp">
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:fillViewport="true">
+<LinearLayout
+    android:id="@+id/ln"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingLeft="10dp"
+    android:scrollbarAlwaysDrawVerticalTrack="true">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/loaitaikhoan"
+        android:text="Chọn chuyên môn sửa chữa"
+        android:paddingLeft="5dp"
+        android:textColor="@color/mauden"
+        android:textStyle="bold"/>
     <CheckBox android:id="@+id/PC"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -11,7 +28,7 @@
         android:button="@drawable/check_white"
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
-
+        android:textSize="@dimen/loaitaikhoan"
 
         ></CheckBox>
     <CheckBox android:id="@+id/Laptop"
@@ -22,7 +39,7 @@
         android:button="@drawable/check_white"
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
-
+        android:textSize="@dimen/loaitaikhoan"
         ></CheckBox>
     <CheckBox android:id="@+id/Mayin"
         android:layout_width="fill_parent"
@@ -32,7 +49,7 @@
         android:button="@drawable/check_white"
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
-
+        android:textSize="@dimen/loaitaikhoan"
         ></CheckBox>
     <CheckBox android:id="@+id/photocopy"
         android:layout_width="fill_parent"
@@ -42,7 +59,7 @@
         android:button="@drawable/check_white"
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
-
+        android:textSize="@dimen/loaitaikhoan"
         ></CheckBox>
     <CheckBox android:id="@+id/scan"
         android:layout_width="fill_parent"
@@ -52,7 +69,7 @@
         android:button="@drawable/check_white"
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
-
+        android:textSize="@dimen/loaitaikhoan"
         ></CheckBox>
     <CheckBox android:id="@+id/fax"
         android:layout_width="fill_parent"
@@ -62,17 +79,19 @@
         android:button="@drawable/check_white"
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
-
+        android:textSize="@dimen/loaitaikhoan"
         ></CheckBox>
 
     <Button
-        android:layout_width="70dp"
-        android:layout_height="30dp"
+        android:layout_width="@dimen/bntokpopupW"
+        android:layout_height="@dimen/bntdangkyokH"
         android:text="OK"
         android:id="@+id/okpopup"
         android:textColor="@color/actionbar_text"
         android:background="@color/mauxanh"
         android:layout_gravity="right"
         android:layout_marginRight="50dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:textSize="@dimen/loaitaikhoan"/>
 </LinearLayout>
+</ScrollView>
