--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -10,8 +10,8 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:id="@+id/profile_image"
-        android:layout_width="45dp"
-        android:layout_height="61dp"
+        android:layout_width="@dimen/avatar"
+        android:layout_height="@dimen/avatar1"
         android:src="@drawable/avatar"
         android:layout_weight="0.10" />
     <TextView
