--- a/app/src/main/res/layout/activity_frm_quen_mk.xml
+++ b/app/src/main/res/layout/activity_frm_quen_mk.xml
@@ -60,69 +60,8 @@
                 android:textColor="@color/actionbar_text"
                 android:enabled="false"
                 android:id="@+id/btnSendMail"
-                android:textSize="@dimen/frmDangNhap_textsize"
+                android:textSize="18dp"
                 android:text="Gửi"/>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
-
-
-
-
-<!--
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
-    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:orientation="vertical"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:weightSum="100"
-    tools:context="com.example.llh_pc.it_support.activities.frmQuenMK">
-    <TextView
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/lable_quenmk"
-        android:textSize="@dimen/frmDangNhap_textsizevalidation"
-        android:layout_weight="10"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="40">
-        <EditText
-            android:textSize="@dimen/frmDangNhap_textsize"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/edtMail"
-            android:inputType="textEmailAddress"
-            android:hint="Nhập email"
-            android:theme="@style/MyEditTextTheme"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtEmail"
-            android:textColor="@color/maudo"
-            android:textSize="@dimen/frmDangNhap_textsizevalidation"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="right"
-        android:layout_weight="50">
-        <Button
-            android:layout_width="@dimen/frmDangNhap_btnLogin_Width"
-            android:layout_height="@dimen/frmDangNhap_btnLogin_Height"
-            android:background="@color/mauxam"
-            android:textColor="@color/actionbar_text"
-            android:enabled="false"
-            android:id="@+id/btnSendMail"
-            android:textSize="@dimen/frmDangNhap_textsizevalidation"
-            android:text="Gửi"/>
-    </LinearLayout>
-</LinearLayout>
--->
