--- a/app/src/main/res/layout/popup_validation.xml
+++ b/app/src/main/res/layout/popup_validation.xml
@@ -4,7 +4,8 @@
     android:layout_height="fill_parent"
     android:paddingTop="10dp"
     android:paddingLeft="22dp"
-    android:paddingRight="25dp">
+    android:paddingRight="25dp"
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,7 +13,7 @@
         android:layout_gravity="left"
         android:textColor="@color/mauden"
         android:textStyle="bold"
-        android:text="ITSupport"/>
+        android:text="@string/TitlePopUp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,18 +31,5 @@
         android:layout_gravity="right"
         android:layout_marginTop="20dp"
         android:layout_marginRight="30dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="100dp"/>
 </LinearLayout>
-<!--
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:paddingTop="10dp"
-    android:paddingLeft="22dp"
-    android:paddingRight="25dp">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvValidation"/>
-</LinearLayout>-->
