Create post and Detail Post

--- a/app/src/main/res/layout/activity_frm_ghi_chu.xml
+++ b/app/src/main/res/layout/activity_frm_ghi_chu.xml
@@ -25,9 +25,10 @@
         <EditText
             android:layout_gravity="top"
             android:id="@+id/edtGhiChu"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Viết ghi chú ở đây.(Có thể bỏ trống)"
+            android:theme="@style/MyEditTextTheme"
             />
     </LinearLayout>
 
