--- a/app/src/main/res/layout/activity_frm_child_post.xml
+++ b/app/src/main/res/layout/activity_frm_child_post.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.llh_pc.it_support.activities.frmBaoHu">
     <LinearLayout
