--- a/app/src/main/res/layout/activity_frm_ghi_chu_khac.xml
+++ b/app/src/main/res/layout/activity_frm_ghi_chu_khac.xml
@@ -24,15 +24,16 @@
         android:layout_weight="30">
         <EditText
             android:layout_gravity="top"
-            android:id="@+id/edtGhiChu"
-            android:layout_width="wrap_content"
+            android:id="@+id/edtGhiChuOther"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Viết ghi chú ở đây.(Có thể bỏ trống)"
+            android:theme="@style/MyEditTextTheme"
             />
     </LinearLayout>
 
     <Button
-        android:id="@+id/btnCreatePost"
+        android:id="@+id/btnCreatePostOther"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/mauxanh"
