--- a/app/src/main/res/layout/activity_load_post_adapter.xml
+++ b/app/src/main/res/layout/activity_load_post_adapter.xml
@@ -18,7 +18,7 @@
             android:id="@+id/imgIcon"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/icon"
+            android:src="@drawable/icon_other"
             android:layout_gravity="center"/>
 
         <LinearLayout
