--- a/app/src/main/res/layout/activity_profile1.xml
+++ b/app/src/main/res/layout/activity_profile1.xml
@@ -122,10 +122,10 @@
                 android:textStyle="bold"
                 android:textColor="@color/mauden"/>
             <TextView
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="6dp"
                 android:id="@+id/email"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="25dp"
                 android:layout_gravity="center"
                 android:ems="40"
                 android:singleLine="false"
@@ -199,6 +199,7 @@
                 android:textColor="@color/mauden"
                 android:layout_weight="1"
                 android:singleLine="false"
+                android:layout_marginTop="2dp"
                 />
             </LinearLayout>
         </LinearLayout>
@@ -229,6 +230,7 @@
                 android:layout_marginLeft="55dp"
                 android:layout_gravity="right"
                 android:layout_weight="1"
+                android:layout_marginTop="2dp"
                 />
 
         </LinearLayout>
