--- a/app/src/main/res/layout/popup_other.xml
+++ b/app/src/main/res/layout/popup_other.xml
@@ -25,10 +25,13 @@
         android:textColor="@color/mauxam" />
 
     <EditText
+        android:imeOptions="actionDone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/edtOther"
-        android:theme="@style/MyEditTextTheme"/>
+        android:theme="@style/MyEditTextTheme"
+        android:maxLength="25"
+        android:singleLine="true"/>
 
 
     <LinearLayout
@@ -36,6 +39,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:gravity="right">
+
         <Button
             android:layout_marginRight="20dp"
             android:id="@+id/huypopup"
@@ -46,6 +50,7 @@
             android:text="Hủy"
             android:textColor="@color/actionbar_text" />
         <Button
+
             android:id="@+id/okpopup"
             android:layout_width="70dp"
             android:layout_height="30dp"
