fix bug notification

--- a/app/src/main/res/layout/activity_detail_pick_post.xml
+++ b/app/src/main/res/layout/activity_detail_pick_post.xml
@@ -185,7 +185,8 @@
             android:layout_gravity="center_horizontal"
             android:background="@color/mauxanh"
             android:textColor="@color/actionbar_text"
-            android:id="@+id/btnAccept"/>
+            android:id="@+id/btnAccept"
+            />
 
     </LinearLayout>
 </LinearLayout>
