--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -215,7 +215,8 @@
             android:orientation="horizontal"
             android:layout_gravity="left"
             android:paddingLeft="10dp"
-            android:paddingRight="10dp">
+            android:paddingRight="10dp"
+            android:layout_marginTop="10dp">
             <TextView
                 android:paddingTop="13dp"
                 android:layout_width="wrap_content"
@@ -321,7 +322,7 @@
             android:orientation="horizontal"
             android:paddingRight="10dp"
             android:paddingLeft="10dp"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="15dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -353,7 +354,7 @@
             android:orientation="horizontal"
             android:paddingLeft="5dp"
             android:paddingRight="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="18dp"
             >
             <!--<GridView xmlns:android="http://schemas.android.com/apk/res/android"-->
             <!--android:id="@+id/gridView1"-->
