--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -375,73 +375,84 @@
                 android:textStyle="bold"
                 android:textColor="@color/mauden"
                 android:layout_marginLeft="5dp"/>
-            <Button
-                android:id="@+id/bntPC"
-                android:layout_width="40dp"
-                android:layout_height="30dp"
-                android:text="PC"
-                android:visibility="gone"
-                android:enabled="false"
-                android:background="@null"
-                android:textColor="@color/mauxam"
-                android:layout_alignParentLeft="true"
-                />
-            <Button
-                android:id="@+id/bntLaptpo"
-                android:layout_width="55dp"
-                android:layout_height="30dp"
-                android:text="Laptop"
-                android:visibility="gone"
-                android:enabled="false"
-                android:background="@null"
-                android:textColor="@color/mauxam"
-                android:layout_alignParentLeft="true"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:autoLink="all"
+
+                android:textColor="@color/mauxanh"
+                android:id="@+id/link"
+                android:layout_marginLeft="19dp"
+                android:linksClickable="true"
 
                 />
-            <Button
-                android:id="@+id/bntMayin"
-                android:layout_width="55dp"
-                android:layout_height="30dp"
-                android:text="Máy in"
-                android:visibility="gone"
-                android:enabled="false"
-                android:background="@null"
-                android:textColor="@color/mauxam"
-                android:layout_alignParentLeft="true"
-                />
-            <Button
-                android:id="@+id/bntMayScan"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:text="Máy Scan"
-                android:visibility="gone"
-                android:enabled="false"
-                android:background="@null"
-                android:textColor="@color/mauxam"
-                android:layout_alignParentLeft="true"
-                />
-            <Button
-                android:id="@+id/photocopy"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:text="Máy Photocopy"
-                android:visibility="gone"
-                android:enabled="false"
-                android:background="@null"
-                android:textColor="@color/mauxam"
-                android:layout_alignParentLeft="true"
-                />
-            <Button
-                android:id="@+id/bntMayfax"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:text="Máy Fax"
-                android:visibility="gone"
-                android:enabled="false"
-                android:background="@null"
-                android:textColor="@color/mauxam"
-                android:layout_alignParentLeft="true"
-                />
+            <!--<Button-->
+                <!--android:id="@+id/bntPC"-->
+                <!--android:layout_width="40dp"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:text="PC"-->
+                <!--android:visibility="gone"-->
+                <!--android:enabled="false"-->
+                <!--android:background="@null"-->
+                <!--android:textColor="@color/mauxam"-->
+                <!--android:layout_alignParentLeft="true"-->
+                <!--/>-->
+            <!--<Button-->
+                <!--android:id="@+id/bntLaptpo"-->
+                <!--android:layout_width="55dp"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:text="Laptop"-->
+                <!--android:visibility="gone"-->
+                <!--android:enabled="false"-->
+                <!--android:background="@null"-->
+                <!--android:textColor="@color/mauxam"-->
+                <!--android:layout_alignParentLeft="true"-->
+
+                <!--/>-->
+            <!--<Button-->
+                <!--android:id="@+id/bntMayin"-->
+                <!--android:layout_width="55dp"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:text="Máy in"-->
+                <!--android:visibility="gone"-->
+                <!--android:enabled="false"-->
+                <!--android:background="@null"-->
+                <!--android:textColor="@color/mauxam"-->
+                <!--android:layout_alignParentLeft="true"-->
+                <!--/>-->
+            <!--<Button-->
+                <!--android:id="@+id/bntMayScan"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:text="Máy Scan"-->
+                <!--android:visibility="gone"-->
+                <!--android:enabled="false"-->
+                <!--android:background="@null"-->
+                <!--android:textColor="@color/mauxam"-->
+                <!--android:layout_alignParentLeft="true"-->
+                <!--/>-->
+            <!--<Button-->
+                <!--android:id="@+id/photocopy"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:text="Máy Photocopy"-->
+                <!--android:visibility="gone"-->
+                <!--android:enabled="false"-->
+                <!--android:background="@null"-->
+                <!--android:textColor="@color/mauxam"-->
+                <!--android:layout_alignParentLeft="true"-->
+                <!--/>-->
+            <!--<Button-->
+                <!--android:id="@+id/bntMayfax"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:text="Máy Fax"-->
+                <!--android:visibility="gone"-->
+                <!--android:enabled="false"-->
+                <!--android:background="@null"-->
+                <!--android:textColor="@color/mauxam"-->
+                <!--android:layout_alignParentLeft="true"-->
+                <!--/>-->
         </LinearLayout>
         <!--<LinearLayout-->
         <!--android:layout_width="wrap_content"-->
