--- a/app/src/main/res/layout/popupuser.xml
+++ b/app/src/main/res/layout/popupuser.xml
@@ -11,6 +11,7 @@
         android:textColor="@color/mauden"
         android:textStyle="bold"/>
     <TextView
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/loaitaikhoan"
