--- a/app/src/main/res/layout/activity_frm_thong_bao.xml
+++ b/app/src/main/res/layout/activity_frm_thong_bao.xml
@@ -5,8 +5,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.llh_pc.it_support.activities.frmThongBao">
-
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+    <ListView
+        android:id="@+id/lsPost"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
 </RelativeLayout>
