--- a/app/src/main/res/layout/activity_load_post_adapter.xml
+++ b/app/src/main/res/layout/activity_load_post_adapter.xml
@@ -56,7 +56,7 @@
                 android:orientation="horizontal"
                 android:gravity="right">
                 <Button
-                    android:layout_marginRight="10dp"
+                    android:layout_marginRight="6dp"
                     android:layout_height="28dp"
                     android:textSize="12dp"
                     android:height="30dp"
@@ -71,6 +71,19 @@
                     android:text="Hủy"
                     />
                 <Button
+                    android:layout_marginRight="6dp"
+                    android:paddingLeft="3dp"
+                    android:paddingRight="3dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="28dp"
+                    android:focusable="false"
+                    android:background="@color/mauxanh"
+                    android:textColor="@color/actionbar_text"
+                    android:text="Processing"
+                    android:textSize="12dp"
+                    android:id="@+id/btnProcessing"/>
+                <Button
+
                     android:paddingLeft="3dp"
                     android:paddingRight="3dp"
                     android:layout_width="wrap_content"
@@ -84,4 +97,9 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar" />
 </LinearLayout>
